[package]
name = "en_fuzzy_heavy_hitters_lp"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
bincode = "1.3"     # for serialization
serde = { version = "1.0", features = ["derive"] }
num-bigint = "0.4"
num-traits = "0.2"
rand = "0.8"

fancy-garbling = { git = "https://github.com/GaloisInc/swanky", rev="553ede0"}
ocelot = { git = "https://github.com/GaloisInc/swanky", rev="553ede0"}
scuttlebutt = { git = "https://github.com/GaloisInc/swanky", rev="553ede0"}
rand_chacha = "0.3"
rayon = "1.10.0"
